[metadata]
name = rosdiscover
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = https://github.com/ChrisTimperley/rosdiscover
description = Statically analyse and repair run-time architectures for ROS
long-description = file: README.rst, LICENSE
keywords = ros, docker, analysis, repair, architecture
license = Apache License, Version 2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  dockerblade ~= 0.4.1
  pyyaml ~= 5.3.1
  roswire ~= 1.1.0
  typing-extensions >= 3.7.2
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
testpaths = test
addopts = -rx -v

[flake8]
ignore = W605
max-line-length = 79

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  mypy
  flake8
  pytest
commands =
  mypy src
  flake8 src

[mypy]
ignore_missing_imports = True

[options.extras_require]
test = pytest
