[metadata]
name = rosdiscover
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = https://github.com/ChrisTimperley/rosdiscover
description = Statically analyse and repair run-time architectures for ROS
long-description = file: README.rst
keywords = ros, docker, analysis, repair, architecture
license = Apache License, Version 2.0
include_package_data = True
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  dockerblade ~= 0.5.2
  pyyaml ~= 5.3.1
# we should either switch this to a VCS dependency or try to release ROSWire 2.0.0 on PyPI
#  roswire ~= 2.0.0
  sourcelocation ~= 1.0.2
  typing-extensions >= 3.7.2
package_dir =
  =src
packages = find:

[options.entry_points]
console_scripts =
  rosdiscover = rosdiscover.cli:main

[options.packages.find]
where = src
